# RIO10

./: README.md  config_graphVPR.json  config_graphVPR_sampling10_scene01.json  config_graphVPR_sampling10_scene03.json  config_graphVPR_sampling10_scene05.json  config_graphVPR_sampling10_scene07.json  config_graphVPR_sampling10_scene09.json  config_samply.json  evaluate.py  setup.sh
data/: GT_RIO10_sampling10.txt  stats_sampling10_scene01.txt  stats_sampling10_scene03.txt  stats_sampling10_scene05.txt  stats_sampling10_scene07.txt  stats_sampling10_scene09.txt
data/GT_RIO10_allscenes/: GT_RIO10_sampling10_scene01.txt  GT_RIO10_sampling10_scene01_queryAND.txt  GT_RIO10_sampling10_scene02.txt  GT_RIO10_sampling10_scene03.txt  GT_RIO10_sampling10_scene03_queryAND.txt  GT_RIO10_sampling10_scene04.txt  GT_RIO10_sampling10_scene05.txt  GT_RIO10_sampling10_scene05_queryAND.txt  GT_RIO10_sampling10_scene06.txt  GT_RIO10_sampling10_scene07.txt  GT_RIO10_sampling10_scene07_queryAND.txt  GT_RIO10_sampling10_scene08.txt  GT_RIO10_sampling10_scene09.txt  GT_RIO10_sampling10_scene09_queryAND.txt  GT_RIO10_sampling10_scene10.txt
data/stats_misc/: stats_scene01_full.txt  stats_scene01_sampling10.txt  stats_scene03050709_full.txt  stats_scene03050709_sampling10.txt
src/: bash_plot_scene0X.py  bash_plot_scene0X.sh  bulk_run_full_eval_code.py  plot.py  plot_scene01.py  plot_scene0X.py  renaming_files_sampling.py  renaming_stats_sampling.py  results_average_across_scenes.py
src/eval/: CMakeLists.txt  main.cpp
(+137 files in other folders)
